Fixing invisible space

--- a/src/Credits/style.css
+++ b/src/Credits/style.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #1f6101;
 }
 
 .credits__menu {
